--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A server of Maji a website to access information and price lists of some vendors cooperating with PT. Sumba Tourist Services",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,8 +13,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.0.0-beta.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.0",
     "sequelize": "^6.37.1"
   }
 }
