--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^5.0.0-beta.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.2",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1"
   }
