--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=3000
+
+MONGO_URI=mongodb+srv://patrickanthonio993:EKaQVcy94Ly9nMUc@pricelistsumba.y6yh68f.mongodb.net/PriceListSumba?retryWrites=true&w=majority&appName=PriceListSumba
