--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.2.2",
     "nodemon": "^3.1.0",
     "password-validator": "^5.3.0",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "validator": "^13.11.0"
   }
 }
